--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,9 +2,24 @@
     -fx-background: #ffffff;
 }
 .title {
-    -fx-padding: 10px;
+    -fx-padding: 15px;
     -fx-color:black;
     -fx-base: rgb(0,0,0);
     -fx-font-size: 25px;
     -fx-text-alignment: center;
+}
+.button {
+    -fx-padding: 5px 15px;
+    -fx-border-color: darkgrey;
+    -fx-border-width: 1px;
+    -fx-border-radius: 3px;
+    -fx-font-size: 16px;
+    -fx-text-alignment: center;
+}
+.submitButton{
+    -fx-background-color: #61a910;
+    -fx-text-fill: white;
+}
+.label{
+    -fx-font-size: 16px;
 }
