--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,6 +4,9 @@
 .panePadding{
     -fx-padding: 25px;
 }
+.addRatingPane{
+    -fx-padding: 0px 0px 15px 0px;
+}
 .title {
     -fx-padding: 15px;
     -fx-color:black;
@@ -36,6 +39,9 @@
 .label{
     -fx-font-size: 16px;
 }
+.label-small{
+    -fx-font-size: 12px;
+}
 .welcomeLabel {
     -fx-padding: 15px 0px 20px 0px;
     -fx-color:black;
@@ -64,13 +70,8 @@
 .infoPane{
     -fx-background-color: white;
 }
-.searchPanelLayout{
-    -fx-background-color: white;
-    -fx-padding: 10px;
-    -fx-border-width: 0 0 1 0;
-    -fx-border-color: #d6d6d6;
-}
-.searchPanelLabel{
+
+.boldLabel{
     -fx-font-weight: 800;
 }
 .searchField{
@@ -80,7 +81,12 @@
     -fx-text-fill: white;
     -fx-background-color: #22a2d0;
 }
-
+.searchPanelLayout{
+    -fx-background-color: white;
+    -fx-padding: 10px 10px 10px 30px;
+    -fx-border-width: 0 0 1 0;
+    -fx-border-color: #d6d6d6;
+}
 .detailButton{
     -fx-text-fill: white;
     -fx-background-color: #22a2d0;
@@ -91,4 +97,13 @@
 }
 .registrationBoxButtons {
     -fx-padding: 10px 0 0 0;
+}
+.ratingPane{
+    -fx-background-color: white;
+    -fx-padding: 10px;
+    -fx-border-width: 1 0 1 0;
+    -fx-border-color: #d6d6d6;
+}
+.detailPane{
+    -fx-padding: 0 30px 0 0 ;
 }
